compiler/testData/diagnostics/tests/cast/IsErasedDisallowFromAny.kt
// FIR_IDENTICAL

fun ff(l: Any) = l is <!CANNOT_CHECK_FOR_ERASED!>MutableList<String><!>
